back to top fixed

--- a/team-details.html
+++ b/team-details.html
@@ -71,57 +71,57 @@
 
     <main class="main_wrapper overflow-hidden">
 
-         <!-- animation  -->
-         <div class="header__animate bg__black">
+        <!-- animation  -->
+        <div class="header__animate bg__black">
             <div class="container-fluid">
                 <div class="header__animate__wraper">
 
-                <div class="header__animate__item">
-                    <i class="icofont-phone"></i>
-                    <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
-                </div>
+                    <div class="header__animate__item">
+                        <i class="icofont-phone"></i>
+                        <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
+                    </div>
 
-                <div class="header__animate__item">
-                    <i class="icofont-email"></i>
-                    <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
-                </div>
-                <div class="header__animate__item">
-                    <i class="icofont-phone"></i>
-                    <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
-                </div>
+                    <div class="header__animate__item">
+                        <i class="icofont-email"></i>
+                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                    </div>
+                    <div class="header__animate__item">
+                        <i class="icofont-phone"></i>
+                        <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
+                    </div>
 
-                <div class="header__animate__item">
-                    <i class="icofont-email"></i>
-                    <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
-                </div>
-                <div class="header__animate__item">
-                    <i class="icofont-phone"></i>
-                    <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
-                </div>
+                    <div class="header__animate__item">
+                        <i class="icofont-email"></i>
+                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                    </div>
+                    <div class="header__animate__item">
+                        <i class="icofont-phone"></i>
+                        <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
+                    </div>
 
-                <div class="header__animate__item">
-                    <i class="icofont-email"></i>
-                    <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
-                </div>
-                <div class="header__animate__item">
-                    <i class="icofont-phone"></i>
-                    <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
-                </div>
+                    <div class="header__animate__item">
+                        <i class="icofont-email"></i>
+                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                    </div>
+                    <div class="header__animate__item">
+                        <i class="icofont-phone"></i>
+                        <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
+                    </div>
 
-                <div class="header__animate__item">
-                    <i class="icofont-email"></i>
-                    <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
-                </div>
-                <div class="header__animate__item">
-                    <i class="icofont-phone"></i>
-                    <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
-                </div>
+                    <div class="header__animate__item">
+                        <i class="icofont-email"></i>
+                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                    </div>
+                    <div class="header__animate__item">
+                        <i class="icofont-phone"></i>
+                        <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
+                    </div>
 
-                <div class="header__animate__item">
-                    <i class="icofont-email"></i>
-                    <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                    <div class="header__animate__item">
+                        <i class="icofont-email"></i>
+                        <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
+                    </div>
                 </div>
-            </div> 
             </div>
         </div>
         <header>
@@ -150,7 +150,8 @@
                                             <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="service.html">Services
                                                     <i class="icofont-long-arrow-down"></i></a>
-                                                <ul class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
+                                                <ul
+                                                    class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
 
                                                     <li><a href="webdevelopment.html">Web Development</a></li>
                                                     <li><a href="software.html">Software Development</a></li>
@@ -171,16 +172,16 @@
                                             <li><a href="team.html">Team </a></li>
 
                                             <li class="headerarea__common__dropdown"><a
-                                                class="headerarea__has__dropdown" href="contact.html">CONTACT
-                                                <i class="icofont-long-arrow-down"></i></a>
-                                            <ul class="headerarea__submenu headerarea__submenu--five--wrap">
+                                                    class="headerarea__has__dropdown" href="contact.html">CONTACT
+                                                    <i class="icofont-long-arrow-down"></i></a>
+                                                <ul class="headerarea__submenu headerarea__submenu--five--wrap">
 
-                                                <li><a href="about.html">ABOUT </a></li>
-                                                <li><a href="project.html">Portfolio </a></li>
+                                                    <li><a href="about.html">ABOUT </a></li>
+                                                    <li><a href="project.html">Portfolio </a></li>
 
-                                            </ul>
+                                                </ul>
 
-                                        </li>
+                                            </li>
 
                                 </div>
 
@@ -189,7 +190,7 @@
                             </div>
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
-                                
+
                                     <div class="headerarea__button">
                                         <a class="default__button" href="contact.html">GET FREE QUATE</a>
                                     </div>
@@ -219,14 +220,14 @@
                             </a></div>
                     </div>
 
-                
+
 
                 </div>
             </div>
 
             </div>
         </header>
-<!-- header start -->
+        <!-- header start -->
 
 
         <!-- Start Offcanvas header menu -->
@@ -656,7 +657,7 @@
                         </div>
                     </div>
                 </div>
-        <!-- service__section__start -->
+                <!-- service__section__start -->
 
                 <div class="service__2 sp_top_140 sp_bottom_70 special__spacing" id="service__area"
                     style="background: var(--pinkcolor) url(assets/img/service/service__bg__5.png);">
@@ -1278,7 +1279,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                      <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
+                                <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
@@ -1300,21 +1301,15 @@
             </div>
         </div>
         <!-- footer__section__end -->
-    <!-- back to top -->
-    <a href="#top" class="back-to-top" id="backToTop">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
-            <path d="M12 19V6M5 12l7-7 7 7"/>
-        </svg>
-    </a>
-           <!-- back to top -->
-
-
-
+        <!-- back to top -->
+        <a class="back-to-top" id="backToTop">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
+                <path d="M12 19V6M5 12l7-7 7 7" />
+            </svg>
+        </a>
+        <!-- back to top -->
     </main>
-
-
-
-
 
     <!-- JS here -->
     <script src="assets/js/popper.min.js"></script>
@@ -1324,7 +1319,26 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
-
+    <!-- back to top -->
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const backToTopButton = document.getElementById("backToTop");
+            window.addEventListener("scroll", () => {
+                if (window.scrollY > 200) {
+                    backToTopButton.classList.add("show");
+                } else {
+                    backToTopButton.classList.remove("show");
+                }
+            });
+            backToTopButton.addEventListener("click", (e) => {
+                e.preventDefault();
+                window.scrollTo({
+                    top: 0,
+                    behavior: "smooth",
+                });
+            });
+        });
+    </script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
