--- a/team.html
+++ b/team.html
@@ -735,88 +735,88 @@
                         </div>
                     </div>
                     <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
-                    data-aos-duration="2100">
-                    <div class="team__member__3__single team__member__border text-center single__transform">
-                        <div class="team__member__3__single__inner">
-                            <div class="team__member__3__img">
-                                <img src="assets/img/service/awais.png" alt="">
-                            </div>
-                            <div class="team__member__name">
-                                <h6><a href="team-details.html">Mr. Awais</a></h6>
-                                <p>Digital Marketing</p>
-                            </div>
-                            <div class="team__member__icon">
-                                <ul>
-                                    <li>
-                                        <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
-                                    </li>
-                                    <li>
-                                        <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
-                                    </li>
-                                    <li>
-                                        <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
-                                    </li>
-                                </ul>
+                        data-aos-duration="2100">
+                        <div class="team__member__3__single team__member__border text-center single__transform">
+                            <div class="team__member__3__single__inner">
+                                <div class="team__member__3__img">
+                                    <img src="assets/img/service/awais.png" alt="">
+                                </div>
+                                <div class="team__member__name">
+                                    <h6><a href="team-details.html">Mr. Awais</a></h6>
+                                    <p>Digital Marketing</p>
+                                </div>
+                                <div class="team__member__icon">
+                                    <ul>
+                                        <li>
+                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                        </li>
+                                        <li>
+                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                        </li>
+                                        <li>
+                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
-                    data-aos-duration="2300">
-                    <div class="team__member__3__single team__member__border text-center single__transform">
-                        <div class="team__member__3__single__inner">
-                            <div class="team__member__3__img">
-                                <img src="assets/img/team/Shoaib.png" alt="">
-                            </div>
-                            <div class="team__member__name">
-                                <h6><a href="team-details.html">Mr. Shoaib Jamil</a></h6>
-                                <p>Graphic Designer</p>
-                            </div>
-                            <div class="team__member__icon">
-                                <ul>
-                                    <li>
-                                        <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
-                                    </li>
-                                    <li>
-                                        <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
-                                    </li>
-                                    <li>
-                                        <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
-                                    </li>
-                                </ul>
+                    <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
+                        data-aos-duration="2300">
+                        <div class="team__member__3__single team__member__border text-center single__transform">
+                            <div class="team__member__3__single__inner">
+                                <div class="team__member__3__img">
+                                    <img src="assets/img/team/Shoaib.png" alt="">
+                                </div>
+                                <div class="team__member__name">
+                                    <h6><a href="team-details.html">Mr. Shoaib Jamil</a></h6>
+                                    <p>Graphic Designer</p>
+                                </div>
+                                <div class="team__member__icon">
+                                    <ul>
+                                        <li>
+                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                        </li>
+                                        <li>
+                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                        </li>
+                                        <li>
+                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
-                    data-aos-duration="2500">
-                    <div class="team__member__3__single text-center team__member__border single__transform">
-                        <div class="team__member__3__single__inner">
-                            <div class="team__member__3__img">
-                                <img src="assets/img/team/saif-content.png" alt="">
-                            </div>
-                            <div class="team__member__name">
-                                <h6><a href="team-details.html">Mr. Saif</a></h6>
-                                <p>Content Creator</p>
-                            </div>
-                            <div class="team__member__icon">
-                                <ul>
-                                    <li>
-                                        <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
-                                    </li>
-                                    <li>
-                                        <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
-                                    </li>
-                                    <li>
-                                        <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
-                                    </li>
-                                </ul>
+                    <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
+                        data-aos-duration="2500">
+                        <div class="team__member__3__single text-center team__member__border single__transform">
+                            <div class="team__member__3__single__inner">
+                                <div class="team__member__3__img">
+                                    <img src="assets/img/team/saif-content.png" alt="">
+                                </div>
+                                <div class="team__member__name">
+                                    <h6><a href="team-details.html">Mr. Saif</a></h6>
+                                    <p>Content Creator</p>
+                                </div>
+                                <div class="team__member__icon">
+                                    <ul>
+                                        <li>
+                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                        </li>
+                                        <li>
+                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                        </li>
+                                        <li>
+                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
                     <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
                         data-aos-duration="2700">
@@ -1113,7 +1113,7 @@
         </div>
         <!-- footer__section__end -->
         <!-- back to top -->
-        <a href="#top" class="back-to-top" id="backToTop">
+        <a class="back-to-top" id="backToTop">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                 stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
                 <path d="M12 19V6M5 12l7-7 7 7" />
@@ -1137,7 +1137,26 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
-
+    <!-- back to top -->
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const backToTopButton = document.getElementById("backToTop");
+            window.addEventListener("scroll", () => {
+                if (window.scrollY > 200) {
+                    backToTopButton.classList.add("show");
+                } else {
+                    backToTopButton.classList.remove("show");
+                }
+            });
+            backToTopButton.addEventListener("click", (e) => {
+                e.preventDefault();
+                window.scrollTo({
+                    top: 0,
+                    behavior: "smooth",
+                });
+            });
+        });
+    </script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
