--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -753,7 +753,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -772,7 +772,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/coding.jpg" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
@@ -791,7 +791,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/CMS.jpg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -810,7 +810,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/ecommerce.jpg" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
@@ -832,7 +832,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/APP Development.jpg" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
@@ -851,7 +851,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/API.jpg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -869,7 +869,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/responsive.jpg" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
@@ -889,7 +889,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/maintance.jpg" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
@@ -910,7 +910,7 @@
                     <div class="col-md-8">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/ui.jpg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
