--- a/appdevelop.html
+++ b/appdevelop.html
@@ -702,7 +702,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -720,7 +720,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/coding.jpg" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
@@ -739,7 +739,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/CMS.jpg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -758,7 +758,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/ecommerce.jpg" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
@@ -778,7 +778,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/APP Development.jpg" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
@@ -797,7 +797,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/API.jpg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -815,7 +815,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/responsive.jpg" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
@@ -835,7 +835,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/maintance.jpg" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
@@ -854,7 +854,7 @@
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
-                                <div class="col-md-4 p-0">
+                                <div class="col-md-4">
                                     <img src="assets/img/web image/ui.jpg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
