--- a/seo.html
+++ b/seo.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>service-Details | Digital Minds On</title>
+    <title>SEO Specialist | 1# Google Ranking | Digital Minds On</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -435,13 +435,13 @@
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">Service Details</h2>
+                                <h2 class="heading">Search Engine Optimization (SEO) </h2>
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
                                     <li>// </li>
-                                    <li> About us </li>
+                                    <li> Services</li>
                                 </ul>
                             </div>
                         </div>
@@ -489,38 +489,57 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Strategic Planning
+                                            <a class="sidebar__common__input" href="#">Web Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Market Entry Strategy
+                                            <a class="sidebar__common__input" href="#">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Business Process optimization
-
+                                            <a class="sidebar__common__input" href="#">App Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Financial Restructuring
+                                            <a class="sidebar__common__input" href="#">Digital Marketing
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Cost Reduction Analysis
+                                            <a class="sidebar__common__input" href="#">WordPress Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Supply Chain Optimization
+                                            <a class="sidebar__common__input" href="#">UI/UX Design
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="#">Game Development
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="#">SEO Specialist
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="#">Content creator
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="#">IT Specialists
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -601,7 +620,7 @@
                                 <img src="assets/img/service/service__details__1.png" alt="">
                             </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Management Consulting</h4>
+                                <h4>Search Engine Optimization (SEO)</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -891,7 +910,7 @@
                     <a href="index.html">
 
                         <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                        <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                        <img class="bbb__icon" src="assets/img/logo/icon.svg" alt="Footer icon badge">
                     </a>
                 </div>
             </div>
