--- a/GameDevelop.html
+++ b/GameDevelop.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>service-Details | Bastun- Business Consulting HTML Template</title>
+    <title>Game Development | Software Company | Digital Minds On</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
