service page bg image fixed

--- a/digtalmarketing.html
+++ b/digtalmarketing.html
@@ -430,10 +430,10 @@
 
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea" style="background: url(assets/img/about/about__bg__1.jpg);">
+        <div class="breadcrumbarea">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="col-xl-12">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
                                 <h2 class="heading">Service Details</h2>
@@ -442,7 +442,7 @@
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
                                     <li>// </li>
-                                    <li> About us </li>
+                                    <li>Digital Marketing</li>
                                 </ul>
                             </div>
                         </div>
