--- a/seo.html
+++ b/seo.html
@@ -429,10 +429,10 @@
 
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea" style="background: url(assets/img/about/about__bg__1.jpg);">
+        <div class="breadcrumbarea">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="col-xl-12">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
                                 <h2 class="heading">Search Engine Optimization (SEO) </h2>
@@ -441,7 +441,7 @@
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
                                     <li>// </li>
-                                    <li> Services</li>
+                                    <li> Seo</li>
                                 </ul>
                             </div>
                         </div>
