--- a/digtalmarketing.html
+++ b/digtalmarketing.html
@@ -616,7 +616,7 @@
                                 <img src="assets/img/service/service__details__1.png" alt="">
                             </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Management Consulting</h4>
+                                <h4>Digital Marketing Services</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -928,7 +928,7 @@
                     <a href="index.html">
 
                         <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                        <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                        <img class="bbb__icon" src="assets/img/logo/icon.svg" alt="Footer icon badge">
                     </a>
                 </div>
             </div>
