--- a/appdevelop.html
+++ b/appdevelop.html
@@ -851,7 +851,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-8 large-card">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
