--- a/seo.html
+++ b/seo.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>SEO Specialist | 1# Google Ranking | Digital Minds On</title>
+    <title>SEO Specialist | 1 Google Ranking | Digital Minds On</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -831,7 +831,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 large-card">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
