--- a/software.html
+++ b/software.html
@@ -840,7 +840,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 large-card">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
